# prbx

./: README.md  card.py  player.py  pyproject.toml  settings.py
prbx_project/: __init__.py  all_cards.py  board.py  card.py  config.yaml  game.py  gamestate.py  main.py  monte_carlo.py  node.py  player.py
tests/: __init__.py  fixtures.py  test_board.py  test_card.py  test_game.py  test_monte_carlo.py  test_player.py
